# BrowserPilot

./: .env.example  .gitignore  Dockerfile  README.md  implementation_plan.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: fill_form.py  screenshot_analysis.py  search_and_extract.py
src/browser_pilot/: __init__.py  __main__.py  config.py  logging.py
src/browser_pilot/agent/: __init__.py  action_loop.py  critic.py  memory.py  planner.py  state.py
src/browser_pilot/browser/: __init__.py  actions.py  anti_detection.py  controller.py  dom_inspector.py  profiles.py
src/browser_pilot/models/: __init__.py  action.py  dom.py  result.py  task.py
src/browser_pilot/server/: __init__.py  app.py  schemas.py
src/browser_pilot/server/routes/: __init__.py  health.py  tasks.py
src/browser_pilot/tools/: __init__.py  browser_tools.py  extraction_tools.py  form_tools.py  navigation_tools.py
src/browser_pilot/utils/: image.py  rate_limiter.py  retry.py  sanitizer.py
src/browser_pilot/vision/: __init__.py  annotator.py  grounding.py  interpreter.py  prompts.py  screenshot.py
tests/: conftest.py
tests/e2e/: __init__.py
tests/unit/: __init__.py  test_annotator.py  test_config.py  test_memory.py  test_models.py  test_rate_limiter.py  test_sanitizer.py  test_state.py
